Added 3 new classes
date, patientrecord and node class added. OK

--- a/AVL Assignment.vcxproj
+++ b/AVL Assignment.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="bst.h" />
+    <ClInclude Include="hospital.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
