--- a/AVL Assignment.vcxproj.filters
+++ b/AVL Assignment.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClInclude Include="bst.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hospital.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
