--- a/AVL Assignment.vcxproj
+++ b/AVL Assignment.vcxproj
@@ -143,7 +143,7 @@
     <ClInclude Include="hospital.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="L20-1113.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
