--- a/AVL Assignment.vcxproj.filters
+++ b/AVL Assignment.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="L20-1113.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
